Adds the `FuncotateSegments` tool.
*`FuncotateSegments` does not support VCF input!*

This tool will create two output files from a GATK seg file:
- A simple TSV which has each segment of the input file funcotated with all the genes it overlaps and which gene/exon covers each breakpoint.  The output format is meant to (closely) match Oncotator.
- A gene list which has every gene, covered by a segment, listed with the segment that covers it.  A gene can appear more than once if a segment breakpoint overlaps the gene (i.e. more than one segment overlaps the gene).  The output format is meant to (closely) match Oncotator.
- Output formats may change.
- Input format is only seg files such as those generated from `ModelSegments`.

Dev and reviewer notes:
- Includes refactoring to drive much of the GencodeFuncotation data solely from the transcript.  As opposed to a mix of the transcript and gene.  This does cause some changes to sorting of the GencodeFuncotations (easily seen in the other transcripts field).  It turns out that the transcript type field has different values for each transcript.  This causes many transcripts to no longer be categorized as protein coding.  Therefore, the ground truth (mostly/totally in `FuncotatorIntegrationTest`) had to be modified.  *Please carefully review the ground truth changes*.
- Introduces the `CompsiteOutputRenderer`, which is composed of multiple output renderers.  This is used when output type is `SEG`, so that it can write both output files simultaneously.
- Introduces the `GeneListOutputRenderer`.  This does not write anything to disk until the entire input file is processed.  The actual writing happens during the `close()` command.  This is necessary since it cannot actually render its output until all segments have been seen.  This output renderer also relies heavily on specific funcotation fields being in the input `FuncotationMap`.  Internally, the gene list output renderer uses the `SimpleTsvOutputRenderer` (see below) to

--- a/build.gradle
+++ b/build.gradle
@@ -255,6 +255,8 @@ dependencies {
     compile 'org.apache.commons:commons-math3:3.5'
     compile 'org.apache.commons:commons-collections4:4.1'
     compile 'org.apache.commons:commons-vfs2:2.0'
+    compile 'org.apache.commons:commons-configuration2:2.4'
+    compile 'commons-beanutils:commons-beanutils:1.9.3'
     compile 'commons-io:commons-io:2.5'
     compile 'org.reflections:reflections:0.9.10'
 
@@ -324,6 +326,9 @@ dependencies {
     
     // Required for SV Discovery machine learning
     compile group: 'biz.k11i', name: 'xgboost-predictor', version: '0.3.0'
+
+    // natural sort
+    compile('net.grey-panther:natural-comparator:1.1')
 
     testUtilsCompile sourceSets.main.output
     testUtilsCompile 'org.testng:testng:' + testNGVersion
