updating google-cloud-nio to 0.74.0
* updating google-cloud-nio from 0.62.0 -> 0.74.0
* fixes confusing gcloud warning about end user credentials that was output on every start up
* improves https://github.com/broadinstitute/gatk/issues/5447 by reducing the warning to an info

--- a/testsettings.gradle
+++ b/testsettings.gradle
@@ -42,6 +42,7 @@ tasks.withType(Test) {
     systemProperty "gatk.spark.debug", System.getProperty("gatk.spark.debug")
 
     environment "SPARK_LOCAL_IP","127.0.0.1"
+    environment "SUPPRESS_GCLOUD_CREDS_WARNING","true"
 
     // set heap size for the test JVM(s)
     minHeapSize = "1G"
