Funcotator: get the NCBI build version from the datasource config file (#5522)
Store the NCBI build version in the Gencode datasource config files
in order to resolve an issue where this value was not always available
when annotating IGR variants.

Resolves #4404

--- a/src/test/resources/org/broadinstitute/hellbender/tools/funcotator/small_pik3ca_dbsnp_ds/gencode_pik3ca/hg19/gencode.config
+++ b/src/test/resources/org/broadinstitute/hellbender/tools/funcotator/small_pik3ca_dbsnp_ds/gencode_pik3ca/hg19/gencode.config
@@ -15,6 +15,10 @@ type = gencode
 # Path to the FASTA file from which to load the sequences for GENCODE transcripts:
 gencode_fasta_path = gencode.v19.PIK3CA_transcript.fasta
 
+# Required field for GENCODE files.
+# NCBI build version
+ncbi_build_version = hg19
+
 # Required field for simpleXSV files.
 # Valid values:
 #     GENE_NAME
