--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ repositories {
 }
 
 final requiredJavaVersion = "8"
-final htsjdkVersion = System.getProperty('htsjdk.version','2.18.2')
+final htsjdkVersion = System.getProperty('htsjdk.version','2.18.2-14-g5362a94-SNAPSHOT')
 final picardVersion = System.getProperty('picard.version','2.18.25')
 final barclayVersion = System.getProperty('barclay.version','2.1.0')
 final sparkVersion = System.getProperty('spark.version', '2.2.0')
