testing new version of hdf5-libary

--- a/build.gradle
+++ b/build.gradle
@@ -260,7 +260,7 @@ dependencies {
 
     compile 'it.unimi.dsi:fastutil:7.0.6'
 
-    compile 'org.broadinstitute:hdf5-java-bindings:1.1.0-hdf5_2.11.0'
+    compile 'org.broadinstitute:hdf5-java-bindings:1.1.0-hdf5_2.11.0-4-g40dd698-SNAPSHOT'
     compile 'org.broadinstitute:gatk-native-bindings:1.0.0'
 
     compile 'org.ojalgo:ojalgo:44.0.0'
