--- a/build.gradle
+++ b/build.gradle
@@ -172,6 +172,7 @@ configurations.all {
     all*.exclude group: 'org.slf4j', module: 'slf4j-jdk14' //exclude this to prevent slf4j complaining about to many slf4j bindings
     all*.exclude group: 'com.google.guava', module: 'guava-jdk5'
     all*.exclude group: 'junit', module: 'junit'
+    all*.exclude group: 'org.apache.spark', module: 'spark-core_2.11'
 }
 
 tasks.withType(JavaCompile) {
@@ -280,12 +281,13 @@ dependencies {
     compile ('org.ojalgo:ojalgo-commons-math3:1.0.0') {
         exclude group: 'org.apache.commons'
     }
-    compile ('org.apache.spark:spark-mllib_2.11:' + sparkVersion) {
+    compile ('org.apache.spark:spark-mllib_2.12:' + sparkVersion) {
         // JUL is used by Google Dataflow as the backend logger, so exclude jul-to-slf4j to avoid a loop
         exclude module: 'jul-to-slf4j'
         exclude module: 'javax.servlet'
         exclude module: 'servlet-api'
     }
+    compile 'com.thoughtworks.paranamer:paranamer:2.8'
 
     compile 'org.bdgenomics.bdg-formats:bdg-formats:0.5.0'
     compile('org.bdgenomics.adam:adam-core-spark2_2.11:0.20.0') {
