update haplochecker dockerfile and task to match

--- a/scripts/mitochondria_m2_wdl/Haplochecker/Dockerfile
+++ b/scripts/mitochondria_m2_wdl/Haplochecker/Dockerfile
@@ -9,4 +9,5 @@ RUN apt-get update && \
 WORKDIR /usr/mtdnaserver
 
 # Download mitolib jar
-RUN wget https://github.com/haansi/mitolib/releases/download/v0.1.0/mitolib-0.1.0.jar
+RUN wget https://github.com/haansi/mitolib/releases/download/0.1.2/mitolib-0.1.2.jar && \
+	mv mitolib-0.1.2.jar mitolib.jar
