--- a/.travis.yml
+++ b/.travis.yml
@@ -165,6 +165,28 @@ script:
     travis_wait 50 ./gradlew jacocoTestReport;
   fi;
 
+# This creates and uploads the gatk zip file to the nightly build bucket, only keeping the 10 newest entries
+# This also constructs the Docker image and uploads it to https://cloud.docker.com/u/broadinstitute/repository/docker/broadinstitute/gatk-nightly/
+#$TRAVIS_BRANCH == master && 
+- if [[ $TRAVIS_EVENT_TYPE == cron && $UPLOAD == true ]]; then
+  #docker login --username=$DOCKER_SERVICE_LOGIN --password=$DOCKER_SERVICE_PASS;
+  $GCLOUD_HOME/gcloud components -q update gsutil;
+  gsutil ls -l gs://gatk-nightly-builds | grep gatk | sort -r -k 2 | grep -o '\S\+$' | tail -n +11 | xargs -I {} gsutil rm {};
+  ./gradlew bundle;
+  ZIP_FILE="$(ls build/ | grep '^gatk.*.zip$' | grep -iv python)";
+  echo "Uploading zip to gs://gatk-nightly-builds/";
+  $GCLOUD_HOME/gsutil -m cp build/$ZIP_FILE gs://gatk-nightly-builds/"$(date +%Y-%m-%d)"-$ZIP_FILE;
+
+  bash build_docker.sh  -e ${TRAVIS_COMMIT} -s -u;
+  DOCKER_TAG=$(docker images -q | head -n 1);
+  DATE=$(date +%Y-%m-%d);
+  DOCKER_NIGHTLY_TAG=broadinstitute/gatk-nightly:$DATE-$(git describe)-NIGHTLY-SNAPSHOT;
+
+  echo "Pushing Nightly Docker image";
+  docker tag $DOCKER_TAG $DOCKER_NIGHTLY_TAG;
+  docker push $DOCKER_NIGHTLY_TAG;
+fi;
+
 after_success:
 - bash <(curl -s https://codecov.io/bash)
 - if [[ $TRAVIS_BRANCH == master && $UPLOAD == true ]]; then ./gradlew uploadArchives; fi;
@@ -174,26 +196,7 @@ after_success:
     ./gradlew uploadArchives; 
   fi;
 
-# This creates and uploads the gatk zip file to the nightly build bucket, only keeping the 10 newest entries
-# This also constructs the Docker image and uploads it to https://cloud.docker.com/u/broadinstitute/repository/docker/broadinstitute/gatk-nightly/
-- if [[ $TRAVIS_BRANCH == master && $TRAVIS_EVENT_TYPE == cron && $UPLOAD == true ]]; then
-    docker login --username=$DOCKER_SERVICE_LOGIN --password=$DOCKER_SERVICE_PASS;
-    $GCLOUD_HOME/gcloud components -q update gsutil;
-    gsutil ls -l gs://gatk-nightly-builds | grep gatk | sort -r -k 2 | grep -o '\S\+$' | tail -n +11 | xargs -I {} gsutil rm {};
-    ./gradlew bundle;
-    ZIP_FILE="$(ls build/ | grep '^gatk.*.zip$' | grep -iv python)";
-    echo "Uploading zip to gs://gatk-nightly-builds/";
-    $GCLOUD_HOME/gsutil -m cp build/$ZIP_FILE gs://gatk-nightly-builds/"$(date +%Y-%m-%d)"-$ZIP_FILE;
 
-    bash build_docker.sh  -e ${TRAVIS_COMMIT} -s -u;
-    DOCKER_TAG=$(docker images -q | head -n 1);
-    DATE=$(date +%Y-%m-%d);
-    DOCKER_NIGHTLY_TAG=broadinstitute/gatk-nightly:$DATE-$(git describe)-NIGHTLY-SNAPSHOT;
-
-    echo "Pushing Nightly Docker image";
-    docker tag $DOCKER_TAG $DOCKER_NIGHTLY_TAG;
-    docker push $DOCKER_NIGHTLY_TAG;
-  fi;
 after_failure:
 - dmesg | tail -100
 after_script:
