--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,24 @@
 version: 2.1
 
 jobs:
-#  downloadLFSFiles:
-#    docker:
-#      - image: circle/java
-#    steps:
-#      - run:
-#          name: install git-lfs
-#          command: |
-#            set +e
-#            apt-get update -y
-#            apt-get install -y openssh-client
-#            ssh -T -oStrictHostKeyChecking=no git@github.com 2>&1 | grep -q "You've successfully authenticated"
-#            set -e
-#            curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | bash
-#            apt-get install -y git-lfs
-#            git lfs install
-#            git lfs --version
-#            git --version
-#            git config --global --add lfs.concurrenttransfers 50
-#      - checkout
-#      - persist_to_workspace:
-#          root: gatk
-#          paths:
-#            - src/test/resources/large
-#            - src/main/resources/large
+  downloadLFSFiles:
+    docker:
+      - image: circleci/openjdk:8u181-jdk
+    steps:
+      - run:
+          name: install git-lfs
+          command: |
+            curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | bash
+            apt-get install -y git-lfs
+            git lfs --version
+            git --version
+            git config --global --add lfs.concurrenttransfers 50
+      - checkout
+      - persist_to_workspace:
+          root: .
+          paths:
+            - src/test/resources/large
+            - src/main/resources/large
   buildDocker:
     docker:
       - image: circleci/openjdk:8u181-jdk
@@ -95,3 +89,4 @@ workflows:
   build:
     jobs:
       - buildDocker
+      - downloadLFSFiles
