--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
             git lfs --version
             git --version
             git config --global --add lfs.concurrenttransfers 50
-            git config --global filter.lfs.smudge "git-lfs smudge --skip %f"
+            export GIT_LFS_SMUDGE=1
       - checkout
       - run: git lfs pull -I src/main/resources/large
       - run: ./gradlew clean collectBundleIntoDir
