checking in a modified version the gkl native library loader with better error checking and poking that into gatk as a .class file

--- a/.travis.yml
+++ b/.travis.yml
@@ -157,6 +157,7 @@ script:
     sudo mkdir -p build/reports/;
     sudo chmod -R a+w build/reports/;
     cp scripts/docker/dockertest.gradle .;
+    cp com/intel/gkl/NativeLibraryLoader.class $(pwd)/testJars;
     sudo docker run -v $(pwd):/gatkCloneMountPoint:cached -v $(pwd)/testJars:/jars:cached --rm -e "TEST_VERBOSITY=minimal" -e "TEST_TYPE=${TEST_TYPE}" -t broadinstitute/gatk:${DOCKER_TAG} bash --init-file /gatk/gatkenv.rc /root/run_unit_tests.sh;
     TEST_EXIT_VALUE=$?;
     sudo mkdir build/reports/tests/test && sudo cp -rp build/reports/tests/testOnPackagedReleaseJar/* build/reports/tests/test && sudo rm -r build/reports/tests/testOnPackagedReleaseJar;
