--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,8 @@ jobs:
             - src/test/resources/large
             - src/main/resources/large
   buildDocker:
+    environment:
+      GIT_LFS_SKIP_SMUDGE=1
     docker:
       - image: circleci/openjdk:8u181-jdk
     steps:
@@ -31,10 +33,7 @@ jobs:
             git lfs --version
             git --version
             git config --global --add lfs.concurrenttransfers 50
-
-      - checkout:
-          - environment:
-              GIT_LFS_SKIP_SMUDGE=1
+      - checkout
       - run: git lfs pull -I src/main/resources/large
       - run: ./gradlew clean collectBundleIntoDir
       - run:
