--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,7 @@ final barclayVersion = System.getProperty('barclay.version','2.1.0')
 final sparkVersion = System.getProperty('spark.version', '2.2.0')
 final hadoopVersion = System.getProperty('hadoop.version', '2.8.2')
 final disqVersion = System.getProperty('disq.version','0.3.0')
-final genomicsdbVersion = System.getProperty('genomicsdb.version','1.0.0-rc2')
+final genomicsdbVersion = System.getProperty('genomicsdb.version','1.0.1')
 final testNGVersion = '6.11'
 // Using the shaded version to avoid conflicts between its protobuf dependency
 // and that of Hadoop/Spark (either the one we reference explicitly, or the one
