--- a/build.gradle
+++ b/build.gradle
@@ -227,7 +227,8 @@ dependencies {
     externalSourceConfiguration 'com.github.broadinstitute:picard:' + picardVersion + ':sources'
     compile ('org.genomicsdb:genomicsdb:' + genomicsdbVersion)  {
         exclude module: 'log4j'
-        exclude module: 'spark-core_2.10'
+        exclude module: 'spark-core_2.11'
+        exclude module: 'spark-sql_2.11'
         exclude module: 'htsjdk'
         exclude module: 'protobuf-java'
     }
