Update Docker to newer version of miniconda.

--- a/build.gradle
+++ b/build.gradle
@@ -559,7 +559,7 @@ task localDevCondaEnv(type: Exec) {
     dependsOn 'condaEnvironmentDefinition'
     inputs.file("$buildDir/$pythonPackageArchiveName")
     workingDir "$buildDir"
-    commandLine "conda", "env", "update", "-f", gatkCondaYML
+    commandLine "conda", "env", "create", "-f", gatkCondaYML
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
