--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,7 @@ final sparkVersion = System.getProperty('spark.version', '2.2.0')
 final hadoopVersion = System.getProperty('hadoop.version', '2.8.2')
 final disqVersion = System.getProperty('disq.version','0.3.0')
 final genomicsdbVersion = System.getProperty('genomicsdb.version','1.0.1')
+final bigQueryVersion = System.getProperty('bigQuery.version', 'v2-rev431-1.25.0')
 final testNGVersion = '6.11'
 // Using the shaded version to avoid conflicts between its protobuf dependency
 // and that of Hadoop/Spark (either the one we reference explicitly, or the one
@@ -236,6 +237,8 @@ dependencies {
     compile 'com.google.guava:guava:18.0'
     compile 'com.github.samtools:htsjdk:'+ htsjdkVersion
     compile googleCloudNioDependency
+
+    compile 'com.google.apis:google-api-services-bigquery:' + bigQueryVersion
 
     compile "gov.nist.math.jama:gov.nist.math.jama:1.1.1"
 
