--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ final hadoopVersion = System.getProperty('hadoop.version', '2.8.2')
 final disqVersion = System.getProperty('disq.version','0.3.0')
 final genomicsdbVersion = System.getProperty('genomicsdb.version','1.0.1')
 final bigQueryVersion = System.getProperty('bigQuery.version', 'v2-rev431-1.25.0')
+final jettyVersion = System.getProperty('jetty.version', '1.19.0')
 final testNGVersion = '6.11'
 // Using the shaded version to avoid conflicts between its protobuf dependency
 // and that of Hadoop/Spark (either the one we reference explicitly, or the one
@@ -238,7 +239,9 @@ dependencies {
     compile 'com.github.samtools:htsjdk:'+ htsjdkVersion
     compile googleCloudNioDependency
 
+    compile 'com.google.oauth-client:google-oauth-client-jetty:' + jettyVersion
     compile 'com.google.apis:google-api-services-bigquery:' + bigQueryVersion
+
 
     compile "gov.nist.math.jama:gov.nist.math.jama:1.1.1"
 
