--- a/build.gradle
+++ b/build.gradle
@@ -65,13 +65,14 @@ final sparkVersion = System.getProperty('spark.version', '2.2.0')
 final hadoopVersion = System.getProperty('hadoop.version', '2.8.2')
 final disqVersion = System.getProperty('disq.version','0.3.0')
 final genomicsdbVersion = System.getProperty('genomicsdb.version','1.0.1')
-final bigQueryVersion = System.getProperty('bigQuery.version', 'v2-rev431-1.25.0')
-final jettyVersion = System.getProperty('jetty.version', '1.19.0')
+final bigQueryVersion = System.getProperty('bigQuery.version', '1.69.0')
+final guavaVersion = System.getProperty('guava.version', '19.0')
 final testNGVersion = '6.11'
+
 // Using the shaded version to avoid conflicts between its protobuf dependency
 // and that of Hadoop/Spark (either the one we reference explicitly, or the one
 // provided by dataproc).
-final googleCloudNioDependency = 'com.google.cloud:google-cloud-nio:0.81.0-alpha:shaded'
+final googleCloudNioDependency = 'com.google.cloud:google-cloud-nio:0.87.0-alpha:shaded'
 
 final baseJarName = 'gatk'
 final secondaryBaseJarName = 'hellbender'
@@ -150,7 +151,7 @@ ensureBuildPrerequisites(requiredJavaVersion, largeResourcesFolder, buildPrerequ
 configurations.all {
     resolutionStrategy {
         // the snapshot folder contains a dev version of guava, we don't want to use that.
-        force 'com.google.guava:guava:18.0'
+        force 'com.google.guava:guava:' + guavaVersion
         // force the htsjdk version so we don't get a different one transitively
         force 'com.github.samtools:htsjdk:' + htsjdkVersion
         // later versions explode Hadoop
@@ -235,12 +236,11 @@ dependencies {
         exclude module: 'protobuf-java'
     }
     compile 'com.opencsv:opencsv:3.4'
-    compile 'com.google.guava:guava:18.0'
+    compile 'com.google.guava:guava:' + guavaVersion
     compile 'com.github.samtools:htsjdk:'+ htsjdkVersion
     compile googleCloudNioDependency
-
-    compile 'com.google.oauth-client:google-oauth-client-jetty:' + jettyVersion
-    compile 'com.google.apis:google-api-services-bigquery:' + bigQueryVersion
+    
+    compile 'com.google.cloud:google-cloud-bigquery:' + bigQueryVersion
 
 
     compile "gov.nist.math.jama:gov.nist.math.jama:1.1.1"
