--- a/build.gradle
+++ b/build.gradle
@@ -151,7 +151,7 @@ ensureBuildPrerequisites(requiredJavaVersion, largeResourcesFolder, buildPrerequ
 configurations.all {
     resolutionStrategy {
         // the snapshot folder contains a dev version of guava, we don't want to use that.
-        force 'com.google.guava:guava:' + guavaVersion
+//        force 'com.google.guava:guava:' + guavaVersion
         // force the htsjdk version so we don't get a different one transitively
         force 'com.github.samtools:htsjdk:' + htsjdkVersion
         // later versions explode Hadoop
@@ -162,7 +162,7 @@ configurations.all {
 
         // make sure we don't pick up an incorrect version of the GATK variant of the google-nio library
         // via Picard, etc.
-        force googleCloudNioDependency
+//        force googleCloudNioDependency
     }
     all*.exclude group: 'org.slf4j', module: 'slf4j-jdk14' //exclude this to prevent slf4j complaining about to many slf4j bindings
     all*.exclude group: 'com.google.guava', module: 'guava-jdk5'
@@ -236,9 +236,9 @@ dependencies {
         exclude module: 'protobuf-java'
     }
     compile 'com.opencsv:opencsv:3.4'
-    compile 'com.google.guava:guava:' + guavaVersion
+//    compile 'com.google.guava:guava:' + guavaVersion
     compile 'com.github.samtools:htsjdk:'+ htsjdkVersion
-    compile googleCloudNioDependency
+//    compile googleCloudNioDependency
     
     compile 'com.google.cloud:google-cloud-bigquery:' + bigQueryVersion
 
