change spark.yarn.executor.memoryOverhead to spark.executor.memoryOverhead as promoted by Spark 2.3

--- a/src/main/resources/org/broadinstitute/hellbender/utils/config/GATKConfig.properties
+++ b/src/main/resources/org/broadinstitute/hellbender/utils/config/GATKConfig.properties
@@ -49,7 +49,7 @@ samjdk.compression_level = 2
 
 spark.kryoserializer.buffer.max = 512m
 spark.io.compression.codec = lzf
-spark.yarn.executor.memoryOverhead = 600
+spark.executor.memoryOverhead = 600
 
 spark.driver.maxResultSize = 0
 spark.driver.userClassPathFirst = true
