--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ jobs:
       - run:
           description: "Run the tests"
           command: |
-            TEST_TYPE=${<< parameters.test-type >>}
+            TEST_TYPE="${<< parameters.test-type >>}"
             echo ${TEST_TYPE}
             sudo mkdir -p build/reports/
             sudo chmod -R a+w build/reports/
