--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,11 +88,12 @@ jobs:
       - run:
           description: "Run the tests"
           command: |
-            TEST_TYPE="${<< parameters.test-type >>}"
+            export TEST_TYPE="${<< parameters.test-type >>}"
             echo ${TEST_TYPE}
             sudo mkdir -p build/reports/
             sudo chmod -R a+w build/reports/
-            DOCKER_TAG=$(docker images -q | head -n 1)
+            export DOCKER_TAG=$(docker images -q | head -n 1)
+            echo $(docker images -q | head -n 1)
             echo "docker run -v $(pwd):/gatkCloneMountPoint:cached -v $(pwd)/testJars:/jars:cached --rm -e 'TEST_VERBOSITY=minimal' -e 'TEST_TYPE=${TEST_TYPE}' -t broadinstitute/gatk:${DOCKER_TAG} bash --init-file /gatk/gatkenv.rc /root/run_unit_tests.sh"
             docker run -v "$(pwd):/gatkCloneMountPoint:cached" -v "$(pwd)/testJars:/jars:cached" --rm -e "TEST_VERBOSITY=minimal" -e "TEST_TYPE=${TEST_TYPE}" -t "broadinstitute/gatk:${DOCKER_TAG}" bash --init-file /gatk/gatkenv.rc /root/run_unit_tests.sh
             TEST_EXIT_VALUE=$?
