more updating environemnt variables

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,16 +3,17 @@ version: 2.1
 jobs:
   setupEnvironmentVariables:
     docker:
-    - image: broadinstitute/gatk:gatkbase-2.0.3
-    - run:
-        name: Setup Environment Variables
-        command: |
-          echo 'export GRADLE_OPTS="-Xmx2048m -Dorg.gradle.daemon=false"' >> $BASH_ENV
-          echo 'export HELLBENDER_TEST_INPUTS=gs://hellbender/test/resources/' >> $BASH_ENV
-          echo 'export HELLBENDER_TEST_STAGING=gs://hellbender-test-logs/staging/' >> $BASH_ENV
-          echo 'export HELLBENDER_TEST_LOGS=/hellbender-test-logs/build_reports/' >> $BASH_ENV
-          echo 'export HELLBENDER_TEST_PROJECT=broad-dsde-dev' >> $BASH_ENV
-          echo 'export HELLBENDER_JSON_SERVICE_ACCOUNT_KEY=servicekey.json' >> $BASH_ENV
+      - image: broadinstitute/gatk:gatkbase-2.0.3
+    steps:
+      - run:
+          name: Setup Environment Variables
+          command: |
+            echo 'export GRADLE_OPTS="-Xmx2048m -Dorg.gradle.daemon=false"' >> $BASH_ENV
+            echo 'export HELLBENDER_TEST_INPUTS=gs://hellbender/test/resources/' >> $BASH_ENV
+            echo 'export HELLBENDER_TEST_STAGING=gs://hellbender-test-logs/staging/' >> $BASH_ENV
+            echo 'export HELLBENDER_TEST_LOGS=/hellbender-test-logs/build_reports/' >> $BASH_ENV
+            echo 'export HELLBENDER_TEST_PROJECT=broad-dsde-dev' >> $BASH_ENV
+            echo 'export HELLBENDER_JSON_SERVICE_ACCOUNT_KEY=servicekey.json' >> $BASH_ENV
 
   downloadLFSFiles:
     description: "Download the LFS files and save them to the workspace"
